--- a/StudentManager/App.xaml
+++ b/StudentManager/App.xaml
@@ -1,15 +1,22 @@
-﻿<Application x:Class="StudentManager.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:local="clr-namespace:StudentManager"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-        <ResourceDictionary>
+﻿<elysiaFramework:AppEx x:Class="StudentManager.App"
+          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+          xmlns:elysiaFramework="clr-namespace:ElysiaFramework;assembly=ElysiaFramework"
+          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+          xmlns:local="clr-namespace:StudentManager"
+          StartupUri="MainWindow.xaml">
+   <Application.Resources>
+       <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="DeepPurple" SecondaryColor="Lime" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/ElysiaFramework;component/Resources.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/ElysiaFramework;component/Assets/Fonts/Fonts.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Application.Resources>
-</Application>
+            <Style TargetType="ScrollViewer" BasedOn="{StaticResource MaterialDesignScrollViewerStyle}">
+               <Setter Property="PanningMode" Value="Both"/>
+           </Style>
+       </ResourceDictionary>
+   </Application.Resources>
+</elysiaFramework:AppEx>
+
